[package]
name = "rosm_pbf_sqlite_dumper"
version = "0.1.0"
authors = ["Zsolt Bölöny <bolony.zsolt@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
rosm_pbf_reader = { git = "https://github.com/rosm-project/rosm_pbf_reader", version = "0.4" }
rusqlite = { version = "0.28", features = ["bundled"] }
