[package]
name = "rosm_pbf_sqlite_dumper"
version = "0.1.0"
authors = ["Zsolt Bölöny <bolony.zsolt@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.103"
serde = { version = "1.0.228", features = ["derive"] }
rosm_pbf_reader = "1.0.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
toml = "1.1.2"
